templates/old/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
 annotations: 
   cert-manager.io/cluster-issuer: letsencrypt-prod 
 name: nginx 
spec: 
   ingressClassName: nginx
   rules:
     - host: selimzakhama-nginx.horizon-workspaces.com
       http: 
        paths:
         - backend:
            service:
              name: nginx-service
              port:
               number: 80
           path:  /
           pathType:  ImplementationSpecific
   tls:
     - hosts:
         - selimzakhama-nginx.horizon-workspaces.com
       secretName: selimzakhama-nginx-tls
